	PR middle-end/56167 	* c-common.c (handle_error_attribute): Fix condition.

* gcc.dg/pr56167.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195748 138bc75d-0d04-0410-961f-82ee72b054a4